Telnet jarri PUTTYtik Serial Monitorra ikusi eta idatzi ahal izateko eta OTAkin hasi WiFi bidez programak flasheatu ahal izateko

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,13 +8,21 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32doit-devkit-v1]
+[env:esp32dev]
 platform = espressif32
-board = esp32doit-devkit-v1
+board = esp32dev
 framework = arduino
+upload_protocol = esptool
+; upload_protocol = espota
+; upload_port = 192.168.1.100
+; upload_flags =
+;     --port=8266
+;     --auth=gaztaindi
 monitor_speed = 115200
 
 
+
+
 lib_deps = 
-    Wire
+    Wire 
 
