--- a/platformio.ini
+++ b/platformio.ini
@@ -8,20 +8,17 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32dev]
+[env:esp32doit-devkit-v1]
 platform = espressif32
-board = esp32dev
+board = esp32doit-devkit-v1
 framework = arduino
 upload_protocol = esptool
 ; upload_protocol = espota
 ; upload_port = 192.168.1.100
 ; upload_flags =
 ;     --port=8266
-;     --auth=gaztaindi
+;     --auth=
 monitor_speed = 115200
-
-
-
 
 lib_deps = 
     Wire 
